--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-vue-components",
+  "name": "vue-component-dir",
   "version": "1.0.0",
   "description": "shortcut method for creating vue files in specific directory structure.",
   "main": "create.js",
